dark mode fix

--- a/frontend/src/components/main-container/main-container.css
+++ b/frontend/src/components/main-container/main-container.css
@@ -31,8 +31,28 @@
   margin-top: 10px;
 }
 
+.weatherMainDark {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #FFFFFF;
+  justify-content: start;
+  margin-bottom: 0px;
+  margin-top: 10px;
+}
+
 .main-container {
   background-color: white;
+  border-radius: 20px 20px 0 0;
+  padding-bottom: 27px;
+  padding-top: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 50px;
+}
+
+.main-containerDark {
+  background-color: #34383F;
   border-radius: 20px 20px 0 0;
   padding-bottom: 27px;
   padding-top: 5px;
